# prolect

./: .gitignore  README.md  dune-project  prolect.opam  test.pl
lib/: core.ml  dune  lexer.mll  parser.mly  printing.ml  support.ml  syntax.ml
